Add apple gesture support to jar by default
Use the "Add-Opens" manifest property to add support for gestures on
MacOS. This eliminates for the "--add-opens" property when using the jar
from the command line, and the corresponding warning if it isn't set.